--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ itsdangerous==1.1.0       # via flask
 jinja2==2.10.1            # via flask
 markupsafe==1.1.1         # via jinja2
 more-itertools==7.0.0     # via pytest
+pathlib2==2.3.3           # via pytest
 pep8==1.7.1               # via pytest-pep8
 pluggy==0.11.0            # via pytest
 py==1.8.0                 # via pytest
@@ -26,7 +27,8 @@ pytest-django==3.4.8
 pytest-mock==1.10.4
 pytest-pep8==1.0.6
 pytest==4.4.2
+python-decouple==3.1
 requests==2.21.0
-six==1.12.0               # via pytest
+six==1.12.0               # via pathlib2, pytest
 urllib3==1.24.3
 werkzeug==0.15.2          # via flask
