--- a/requirements.txt
+++ b/requirements.txt
@@ -5,23 +5,28 @@
 #    pip-compile requirements.in
 #
 apipkg==1.5               # via execnet
+asn1crypto==0.24.0        # via cryptography
 atomicwrites==1.3.0       # via pytest
 attrs==19.1.0             # via pytest
 certifi==2019.3.9         # via requests
+cffi==1.12.3              # via cryptography
 chardet==3.0.4            # via requests
 click==7.0                # via flask
+cryptography==2.6.1       # via jwt
 execnet==1.6.0            # via pytest-cache
 flask-api==1.1
 flask==1.0.2
 idna==2.8                 # via requests
 itsdangerous==1.1.0       # via flask
 jinja2==2.10.1            # via flask
+jwt==0.6.1
 markupsafe==1.1.1         # via jinja2
 more-itertools==7.0.0     # via pytest
 pathlib2==2.3.3           # via pytest
 pep8==1.7.1               # via pytest-pep8
 pluggy==0.11.0            # via pytest
 py==1.8.0                 # via pytest
+pycparser==2.19           # via cffi
 pytest-cache==1.0         # via pytest-pep8
 pytest-django==3.4.8
 pytest-mock==1.10.4
@@ -29,6 +34,6 @@ pytest-pep8==1.0.6
 pytest==4.4.2
 python-decouple==3.1
 requests==2.21.0
-six==1.12.0               # via pathlib2, pytest
+six==1.12.0               # via cryptography, pathlib2, pytest
 urllib3==1.24.3
 werkzeug==0.15.2          # via flask
